# SearchEngine

SearchEngine/: AvlTree.h  CMakeLists.txt  DESIGN.md  Doc.h  HashFunction.h  Index.cpp  Index.h  Parser.cpp  Parser.h  Query.cpp  Query.h  UserInterface.cpp  UserInterface.h  assignment-4-search-engine-jaden-benji.code-workspace  main.cpp  rapidJSONExample.cpp  test  test.cpp
